--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -20,9 +20,7 @@ permissions:
 
 jobs: 
     build: 
-        runs-on: 
-            - ubuntu-latest
-            - windows-latest
+        runs-on: ubuntu-latest
         steps:
             - name: Checkout
               uses: actions/checkout@v4
