--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -30,9 +30,17 @@ jobs:
               with:
                 node-version: 18
 
+            - name: Setup GitHub Pages
+              uses: actions/configure-pages@v3
 
             - name: Install dependencies
               run: npm install
 
             - name: Build
               run: npm run build
+
+            - name: Artifacts
+              uses: actions/upload-artifact@v2
+              with:
+                name: build
+                path: ./out
